# nlip-with-agent-frameworks

./: .gitignore  README.md  pyproject.toml
demo/inter_agent/: langchain_coordinator.py  llamaindex_worker.py
demo/standalone/: langchain_standalone.py  llamaindex_standalone.py
